--- a/package.json
+++ b/package.json
@@ -18,14 +18,18 @@
     "babel"
   ],
   "dependencies": {
+    "axios": "^0.18.0",
     "express": "^4.16.4",
     "prop-types": "^15.6.2",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-loadable": "^5.5.0",
     "react-loader-spinner": "^2.2.0",
+    "react-redux": "^6.0.0",
     "react-router": "^4.3.1",
-    "react-router-dom": "^4.3.1"
+    "react-router-dom": "^4.3.1",
+    "redux": "^4.0.1",
+    "redux-saga": "^1.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.2.2",
