--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build": "node server",
     "test": "jest",
     "test:watch": "npm test -- --watch",
-    "lint": "./node_modules/.bin/eslint src/*.js"
+    "lint-fix": "eslint --fix .",
+    "lint-check": "eslint ."
   },
   "author": "Han Chiang",
   "description": "",
